RESOLVED FIXED75644
REGRESSION (r104060): fast/forms/textarea-metrics.html is failing
https://bugs.webkit.org/show_bug.cgi?id=75644
Summary REGRESSION (r104060): fast/forms/textarea-metrics.html is failing
Antti Koivisto
Reported 2012-01-05 12:38:50 PST
it is
Attachments
patch (1.33 KB, patch)
2012-01-05 12:48 PST, Antti Koivisto
ap: review+
Martin Robinson
Comment 1 2012-01-05 12:44:34 PST
This is the diff in question: --- /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/fast/forms/textarea-metrics-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/fast/forms/textarea-metrics-actual.txt @@ -88,84 +88,84 @@ Testing CSS1Compat document. Properties = none -PASS CSS1Compatdoc.getElementById('no-styles').clientWidth is 54 -PASS CSS1Compatdoc.getElementById('no-styles').clientHeight is 54 -PASS CSS1Compatdoc.getElementById('no-styles').offsetWidth is 56 -PASS CSS1Compatdoc.getElementById('no-styles').offsetHeight is 56 -PASS CSS1Compatdoc.getElementById('no-styles').scrollWidth is 54 -PASS CSS1Compatdoc.getElementById('no-styles').scrollHeight is 54 +FAIL CSS1Compatdoc.getElementById('no-styles').clientWidth should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('no-styles').clientHeight should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('no-styles').offsetWidth should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('no-styles').offsetHeight should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('no-styles').scrollWidth should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('no-styles').scrollHeight should be 54. Was 48. Properties = disabled: "true", -PASS CSS1Compatdoc.getElementById('-disabled-true-').clientWidth is 54 -PASS CSS1Compatdoc.getElementById('-disabled-true-').clientHeight is 54 -PASS CSS1Compatdoc.getElementById('-disabled-true-').offsetWidth is 56 -PASS CSS1Compatdoc.getElementById('-disabled-true-').offsetHeight is 56 -PASS CSS1Compatdoc.getElementById('-disabled-true-').scrollWidth is 54 -PASS CSS1Compatdoc.getElementById('-disabled-true-').scrollHeight is 54 +FAIL CSS1Compatdoc.getElementById('-disabled-true-').clientWidth should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-disabled-true-').clientHeight should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-disabled-true-').offsetWidth should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('-disabled-true-').offsetHeight should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('-disabled-true-').scrollWidth should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-disabled-true-').scrollHeight should be 54. Was 48. Properties = innerHTML: "A", -PASS CSS1Compatdoc.getElementById('-innerHTML-A-').clientWidth is 54 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-').clientHeight is 54 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-').offsetWidth is 56 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-').offsetHeight is 56 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-').scrollWidth is 54 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-').scrollHeight is 54 +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-').clientWidth should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-').clientHeight should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-').offsetWidth should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-').offsetHeight should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-').scrollWidth should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-').scrollHeight should be 54. Was 48. Properties = innerHTML: "AAAAAAAAA", -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-').clientWidth is 37 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-').clientHeight is 54 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-').offsetWidth is 56 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-').offsetHeight is 56 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-').scrollWidth is 37 -FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-').scrollHeight should be 64. Was 104. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-').clientWidth should be 37. Was 31. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-').clientHeight should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-').offsetWidth should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-').offsetHeight should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-').scrollWidth should be 37. Was 31. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-').scrollHeight should be 64. Was 184. Properties = innerHTML: "A", disabled: "true", -PASS CSS1Compatdoc.getElementById('-innerHTML-A-disabled-true-').clientWidth is 54 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-disabled-true-').clientHeight is 54 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-disabled-true-').offsetWidth is 56 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-disabled-true-').offsetHeight is 56 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-disabled-true-').scrollWidth is 54 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-disabled-true-').scrollHeight is 54 +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-disabled-true-').clientWidth should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-disabled-true-').clientHeight should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-disabled-true-').offsetWidth should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-disabled-true-').offsetHeight should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-disabled-true-').scrollWidth should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-disabled-true-').scrollHeight should be 54. Was 48. Properties = innerHTML: "AAAAAAAAA", disabled: "true", -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-disabled-true-').clientWidth is 37 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-disabled-true-').clientHeight is 54 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-disabled-true-').offsetWidth is 56 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-disabled-true-').offsetHeight is 56 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-disabled-true-').scrollWidth is 37 -FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-disabled-true-').scrollHeight should be 64. Was 104. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-disabled-true-').clientWidth should be 37. Was 31. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-disabled-true-').clientHeight should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-disabled-true-').offsetWidth should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-disabled-true-').offsetHeight should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-disabled-true-').scrollWidth should be 37. Was 31. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-disabled-true-').scrollHeight should be 64. Was 184. Properties = innerHTML: "A", style: "padding:8px", -PASS CSS1Compatdoc.getElementById('-innerHTML-A-style-padding-8px-').clientWidth is 66 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-style-padding-8px-').clientHeight is 66 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-style-padding-8px-').offsetWidth is 68 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-style-padding-8px-').offsetHeight is 68 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-style-padding-8px-').scrollWidth is 66 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-style-padding-8px-').scrollHeight is 66 +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-style-padding-8px-').clientWidth should be 66. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-style-padding-8px-').clientHeight should be 66. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-style-padding-8px-').offsetWidth should be 68. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-style-padding-8px-').offsetHeight should be 68. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-style-padding-8px-').scrollWidth should be 66. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-style-padding-8px-').scrollHeight should be 66. Was 48. Properties = innerHTML: "AAAAAAAAA", style: "padding:8px", -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-style-padding-8px-').clientWidth is 49 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-style-padding-8px-').clientHeight is 66 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-style-padding-8px-').offsetWidth is 68 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-style-padding-8px-').offsetHeight is 68 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-style-padding-8px-').scrollWidth is 49 -FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-style-padding-8px-').scrollHeight should be 76. Was 116. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-style-padding-8px-').clientWidth should be 49. Was 31. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-style-padding-8px-').clientHeight should be 66. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-style-padding-8px-').offsetWidth should be 68. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-style-padding-8px-').offsetHeight should be 68. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-style-padding-8px-').scrollWidth should be 49. Was 31. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-style-padding-8px-').scrollHeight should be 76. Was 196. Properties = innerHTML: "A", rows: "10", -PASS CSS1Compatdoc.getElementById('-innerHTML-A-rows-10-').clientWidth is 54 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-rows-10-').clientHeight is 54 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-rows-10-').offsetWidth is 56 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-rows-10-').offsetHeight is 56 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-rows-10-').scrollWidth is 54 -PASS CSS1Compatdoc.getElementById('-innerHTML-A-rows-10-').scrollHeight is 54 +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-rows-10-').clientWidth should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-rows-10-').clientHeight should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-rows-10-').offsetWidth should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-rows-10-').offsetHeight should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-rows-10-').scrollWidth should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-A-rows-10-').scrollHeight should be 54. Was 48. Properties = innerHTML: "AAAAAAAAA", rows: "10", -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-rows-10-').clientWidth is 37 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-rows-10-').clientHeight is 54 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-rows-10-').offsetWidth is 56 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-rows-10-').offsetHeight is 56 -PASS CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-rows-10-').scrollWidth is 37 -FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-rows-10-').scrollHeight should be 64. Was 104. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-rows-10-').clientWidth should be 37. Was 31. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-rows-10-').clientHeight should be 54. Was 48. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-rows-10-').offsetWidth should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-rows-10-').offsetHeight should be 56. Was 50. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-rows-10-').scrollWidth should be 37. Was 31. +FAIL CSS1Compatdoc.getElementById('-innerHTML-AAAAAAAAA-rows-10-').scrollHeight should be 64. Was 184. PASS successfullyParsed is true
Antti Koivisto
Comment 2 2012-01-05 12:48:47 PST
Antti Koivisto
Comment 3 2012-01-06 06:49:00 PST
Note You need to log in before you can comment on or make changes to this bug.