REGRESSION (r104060): fast/forms/textarea-metrics.html is failing https://bugs.webkit.org/show_bug.cgi?id=75644

Reviewed by Alexey Proskuryakov.

We need to clear the style selector on doc type change as the doc type
may affect interpretation of the stylesheets. r104060 extended the life
of the style selector in some cases, exposing this problem.

* dom/Document.cpp:
(WebCore::Document::setDocType):



Canonical link: https://commits.webkit.org/92502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104290 268f45cc-cd09-0410-ab3c-d52691b4dbfc